Changelog
=========

2015-04-23
----------
* Release: 0.5.1
* Group.resources_with_possible_perms() added

2015-04-17
----------
* Release: 0.5
* Now uses detailed permissions
* BACKWARDS INCOMPATIBLE API CHANGES
    * ResourceMixin.users_for_perm() accepts additional parameters group_ids, and user_ids
      to limit the amount of results if needed
    * User.permissions, Resource.perms_for_user, Resource.direct_perms_for_user,
      Resource.group_perms_for_user, Resource.users_for_perm_detailed, Resource.users_for_perm
      now return list of detailed PermissionTuple's instead simple [id, perm_name] pairs
      this will break your application
      You can use ziggurat_foundations.utils.permission_to_04_acls() to convert
      the new tuples to pre 0.5 format


2015-02-18
----------
* Release: 0.4.3
* Added a way to filter on resource types in UserMixin.resources_with_perms()
* Made User.resources dynamic relationship

2014-08-25
----------
* Second Alpha Release 0.4
* Move to paginate from webhelpers.paginate
* Users can now log in via username or email address
* Python 3 compatibale after moving away from webhelpers.paginate


2012-11-28
----------
* First Alpha Release 0.3 - This release should have a fairly stable API
* Hundreds of small and big changes - based on all great feedback we are now 
  using surrogate pkeys instead of natural pkeys for most models. 
  As result of this few methods started accepting id's instead usernames, 
  so consider yourself warned that this release might be bw. incompatible a bit 
  with your application
* At this point all tests should pass on mysql, postgresql, sqlite


2012-06-26
----------

* added some indexes to resource owners
* previous revision ID: 3cfc41c4a5f0

2012-06-25
----------

* dropped groups.id column
* previous revision ID: 53927300c277

2012-06-05
----------

* shrinked integer sized on primary keys
* previous revision ID: 54d08f9adc8c

2012-05-27 version 0.2 First public release