@@ -1,4 +1,4 @@
-__version__ = {'major': 0, 'minor': 5, 'patch': 1}
+__version__ = {'major': 0, 'minor': 5, 'patch': 2}
 
 
 def make_passwordmanager():
