@@ -920,6 +920,62 @@ class UserTestCase(BaseTestCase):
             return self.assertItemsEqual(first, second)
         return self.assertCountEqual(first, second)
 
+
+    def test_resource_users_for_any_perm_additional_users(self):
+        self.maxDiff = 99999
+        self.set_up_user_group_and_perms()
+        user6 = self._addUser(6, 'user 6')
+        user7 = self._addUser(7, 'user 7')
+        perm2 = GroupResourcePermission(
+            perm_name='group_perm2',
+            resource_id=self.resource.resource_id
+        )
+        self.group.resource_permissions.append(perm2)
+        self.group.users.append(user6)
+        self.group.users.append(user7)
+        first = self.resource.users_for_perm(
+            '__any_permission__', db_session=self.session)
+        second = [
+            PermissionTuple(self.user, u'group_perm', 'group', self.group, self.resource, False, True),
+            PermissionTuple(user6, u'group_perm', 'group', self.group, self.resource, False, True),
+            PermissionTuple(user7, u'group_perm', 'group', self.group, self.resource, False, True),
+            PermissionTuple(self.user, u'group_perm2', 'group', self.group, self.resource, False, True),
+            PermissionTuple(user6, u'group_perm2', 'group', self.group, self.resource, False, True),
+            PermissionTuple(user7, u'group_perm2', 'group', self.group, self.resource, False, True),
+            PermissionTuple(self.user, u'test_perm2', 'user', None, self.resource, False, True),
+            PermissionTuple(self.user, u'foo_perm', 'user', None, self.resource, False, True),
+            PermissionTuple(self.user4, u'group_perm', 'group', self.group2, self.resource, False, True),
+            ]
+        if six.PY2:
+            return self.assertItemsEqual(first, second)
+        return self.assertCountEqual(first, second)
+
+    def test_resource_users_for_any_perm_limited_group_perms(self):
+        self.maxDiff = 99999
+        self.set_up_user_group_and_perms()
+        user6 = self._addUser(6, 'user 6')
+        user7 = self._addUser(7, 'user 7')
+        perm2 = GroupResourcePermission(
+            perm_name='group_perm2',
+            resource_id=self.resource.resource_id
+        )
+        self.group.resource_permissions.append(perm2)
+        self.group.users.append(user6)
+        self.group.users.append(user7)
+        first = self.resource.users_for_perm(
+            '__any_permission__', limit_group_permissions=True, db_session=self.session)
+        second = [
+            PermissionTuple(None, u'group_perm', 'group', self.group, self.resource, False, True),
+            PermissionTuple(None, u'group_perm2', 'group', self.group, self.resource, False, True),
+            PermissionTuple(self.user, u'test_perm2', 'user', None, self.resource, False, True),
+            PermissionTuple(self.user, u'foo_perm', 'user', None, self.resource, False, True),
+            PermissionTuple(None, u'group_perm', 'group', self.group2, self.resource, False, True),
+            ]
+        if six.PY2:
+            return self.assertItemsEqual(first, second)
+        return self.assertCountEqual(first, second)
+
+
 class GroupTestCase(BaseTestCase):
 
     def test_add_group(self):
